# spiking-neural-networks

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  MIGRATION_GUIDE.md  README.md  RELEASE_NOTES.md  benchmark_report.md
.github/workflows/: ci.yml  release.yml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
backend/: Cargo.toml  rust-toolchain.toml
backend/benches/: comprehensive_bench.rs
backend/crates/ndfh-api/: Cargo.toml
backend/crates/ndfh-api/src/: lib.rs  observability.rs
backend/crates/ndfh-cli/: Cargo.toml
backend/crates/ndfh-cli/src/: main.rs
backend/crates/ndfh-cli/tests/: integration.rs  policy_spec.rs
backend/crates/ndfh-core/: Cargo.toml
backend/crates/ndfh-core/src/: lib.rs
backend/crates/ndfh-hdx/: Cargo.toml
backend/crates/ndfh-hdx/src/: io.rs  lib.rs
backend/crates/ndfh-hgts/: Cargo.toml
backend/crates/ndfh-hgts/src/: lib.rs
backend/crates/shnn-async/: Cargo.toml
backend/crates/shnn-async-runtime/: Cargo.toml
backend/crates/shnn-async-runtime/src/: lib.rs  scheduler.rs  task.rs
backend/crates/shnn-async-runtime/tests/: runtime_tests.rs
backend/crates/shnn-async/src/: network.rs  runtime.rs
backend/crates/shnn-bench/: Cargo.toml
backend/crates/shnn-bench/src/: async_runtime.rs  neuromorphic.rs
backend/crates/shnn-cli/: Cargo.toml
backend/crates/shnn-cli/src/commands/: nir.rs
backend/crates/shnn-cli/test_workspace/: .gitignore  hSNN.toml
backend/crates/shnn-cli/test_workspace/experiments/: example.toml
backend/crates/shnn-compiler/: Cargo.toml
backend/crates/shnn-core/src/: lib.rs  neuron.rs  time.rs
backend/crates/shnn-core/src/connectivity/: hypergraph.rs  matrix.rs  sparse.rs
backend/crates/shnn-core/src/network/: mod.rs
backend/crates/shnn-embedded/: Cargo.toml
backend/crates/shnn-embedded/src/: embedded_network.rs
backend/crates/shnn-ffi/: Cargo.toml
backend/crates/shnn-ir/: Cargo.toml
backend/crates/shnn-lockfree/: Cargo.toml
backend/crates/shnn-lockfree/tests/: lockfree_tests.rs
backend/crates/shnn-math/: Cargo.toml
backend/crates/shnn-math/src/: matrix.rs  vector.rs
backend/crates/shnn-math/tests/: math_tests.rs
backend/crates/shnn-micro/: Cargo.toml
backend/crates/shnn-micro/src/: connectivity.rs  lib.rs  network.rs
backend/crates/shnn-python/: Cargo.toml
backend/crates/shnn-python/src/: connectivity.d  connectivity.rs  data_formats.rs  lib.rs  nir.rs
backend/crates/shnn-serialize/: Cargo.toml
backend/crates/shnn-serialize/src/: binary.rs  buffer.rs  lib.rs  neural.rs  traits.rs  utils.rs
backend/crates/shnn-serialize/tests/: serialize_tests.rs
backend/crates/shnn-wasm/: Cargo.toml
backend/crates/shnn-wasm/src/: lib.rs
backend/examples/: ported_neurons.rs
backend/examples/bcm/: main.rs
backend/examples/classifiers/: main.rs
backend/examples/hodgkin_huxley/: main.rs
backend/examples/hopfield/: main.rs
backend/examples/interacting_pools/: main.rs
backend/examples/izhikevich/: main.rs
backend/examples/lattice/: main.rs
backend/examples/lattice_network/: main.rs
backend/examples/lsm_architecture/: main.rs
backend/examples/morris_lecar/: main.rs
backend/examples/rstdp_lattice/: main.rs
backend/examples/stdp/: main.rs
backend/src/: digital_twin.rs  lib.rs  nb_parsing.rs
backend/src/classifiers/: mod.rs
backend/src/neuron/: mod.rs
backend/src/neuron/attractors/: mod.rs
backend/src/neuron/hodgkin_huxley/: mod.rs
backend/src/neuron/integrate_and_fire/: mod.rs
backend/src/neuron/iterate_and_spike/: mod.rs
backend/src/neuron/plasticity/: mod.rs
backend/tests/: integrate_and_fire_tests.rs  plasticity_tests.rs
docs/: RELEASE.md  advanced-usage.md  basic-tutorial.md  getting-started.md  performance-guide.md  project-roadmap.md  spiking-neural-networks.md  troubleshooting.md
docs/advanced/: custom-neuron-models.md  gpu-usage.md  neurotransmitter-dynamics.md  plasticity.md
docs/api/: python-api.md  rust-api.md  stability.md
docs/examples/: classifiers.md  digital-twin.md  gallery.md  plasticity.md
interface/: Cargo.toml
interface/tests/: test_basic.py  test_error_handling.py  test_experiment.py
interface/tests/e2e/: test_liquid_manifold_generation.py  test_schizophrenia_pipeline.py
interface_gpu/: requirements.txt
interface_gpu/janky/janky/: Cargo.toml
interface_gpu/tests/e2e/: test_bayesian_inference_pipeline.py
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md
scripts/: prepare_release.sh
