[workspace]
resolver = "2"

members = [
    "crates/shnn-async",
    "crates/shnn-async-runtime",
    "crates/shnn-bench",
    "crates/shnn-cli",
    "crates/shnn-compiler",
    "crates/shnn-core",
    "crates/shnn-embedded",
    "crates/shnn-ffi",
    "crates/shnn-ir",
    "crates/shnn-lockfree",
    "crates/shnn-math",
    "crates/shnn-micro",
    "crates/shnn-python",
    "crates/shnn-runtime",
    "crates/shnn-serialize",
    "crates/shnn-storage",
    "crates/shnn-wasm",
    "crates/ndfh-core",
    "crates/ndfh-cli",
    "crates/ndfh-api",
    "crates/ndfh-hdx",
    "crates/ndfh-hgts",
]

exclude = [
    "crates/shnn-embedded",
    "crates/shnn-python"
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["hSNN Development Team <team@hsnn.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hsnn-project/hsnn"
homepage = "https://hsnn.org"
documentation = "https://docs.rs/hsnn"
keywords = ["neuromorphic", "spiking", "neural-networks", "hypergraph", "rust"]
categories = ["science", "algorithms", "embedded", "wasm"]
description = "A high-performance modular Spiking Neural Network framework with pluggable connectivity structures"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
crossbeam = "0.8"
parking_lot = "0.12"
smallvec = { version = "1.10", features = ["serde"] }
heapless = "0.8"
nb = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rmp-serde = "1.1"

# Math and numerics
nalgebra = "0.32"
ndarray = "0.15"
rand = "0.8"
libm = "0.2"
rayon = "1.8"

# Async and concurrency
futures = "0.3"
async-trait = "0.1"
channel = "1.8"

# Performance and profiling
criterion = "0.5"
pprof = { version = "0.12", features = ["flamegraph"] }

# WebAssembly
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"

# Python bindings
pyo3 = { version = "0.21", features = ["extension-module"] }

# Embedded
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"

# FFI
libc = "0.2"

# Logging and error handling
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"

# Testing
proptest = "1.4"
quickcheck = "1.0"
