[package]
name = "ndfh-hdx"
version = "0.2.0"
edition = "2021"
description = "NDF-H HDX physical storage and dataset manifest utilities (skeleton)"
license = "MIT OR Apache-2.0"

[features]
default = []
schema-validate = ["dep:jsonschema"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
jsonschema = { version = "0.17", optional = true }
thiserror = "1.0"
blake3 = "1.5"
walkdir = "2.5"
ndfh-core = { path = "../ndfh-core" }
