[package]
name = "shnn-compiler"
version = "1.0.0"
edition = "2021"
description = "NIR compiler: registry, verification stubs, and lowering to shnn-runtime"

[dependencies]
thiserror = "1.0"
shnn-ir = { path = "../shnn-ir" }
shnn-runtime = { path = "../shnn-runtime" }
shnn-storage = { path = "../shnn-storage" }